fix: fixed nav bar overlapping

--- a/style.css
+++ b/style.css
@@ -166,6 +166,7 @@ a:hover {
 
   #hamburger-nav {
     display: flex;
+    top: 0;
   }
 }
 
